<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:onClick="onSendSMSClick"
        android:text="@string/request_send_sms"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:onClick="onReceiveSMSClick"
        android:text="@string/request_receive_sms"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:onClick="onReadSMSClick"
        android:text="@string/request_read_sms"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:onClick="onReceiveWapPushClick"
        android:text="@string/request_receive_wap_push"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:onClick="onReceiveMMSClick"
        android:text="@string/request_receive_mms"
        android:textAlignment="center"
        android:textSize="16sp" />

</LinearLayout>