<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:onClick="onReadContactsClick"
        android:text="@string/request_read_contacts"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:onClick="onWriteContactsClick"
        android:text="@string/request_write_contacts"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:onClick="onGetAccountsClick"
        android:text="@string/request_get_accounts"
        android:textAlignment="center"
        android:textSize="16sp" />

</LinearLayout>