<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/request_read_call_log"
        android:onClick="onReadCallLogClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/request_write_call_log"
        android:onClick="onWriteCallLogClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/request_process_outgoing_calls"
        android:onClick="onProcessOutgoingCallsClick"/>

</LinearLayout>