<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_toolbar_back_white">

        <TextView
            android:id="@+id/tv_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:text="@string/group_camera"/>

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:text="@string/app_setting"/>

    </android.support.v7.widget.Toolbar>

    <Button
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:onClick="onCameraClick"
        android:text="@string/request_camera"
        android:textAlignment="center"
        android:textSize="16sp" />

</LinearLayout>